# mcp-proxy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: codeql.yml
docs/: Architecture.md  Roadmap.md
docs/plans/: 2026-02-23-data-models-adapters.md  2026-02-23-pipeline-session-intercept.md
fixtures/: vuln_injection.py
src/mcp_proxy/: __init__.py  cli.py  correlation.py  intercept.py  models.py  pipeline.py  replay.py  session_store.py
src/mcp_proxy/adapters/: __init__.py  base.py  stdio.py
src/mcp_proxy/exporting/: __init__.py
src/mcp_proxy/tui/: __init__.py  app.py  app.tcss  messages.py
src/mcp_proxy/tui/widgets/: __init__.py  message_detail.py  message_list.py  status_bar.py
tests/: test_cli.py  test_correlation.py  test_integration_stdio.py  test_intercept.py  test_models.py  test_pipeline.py  test_replay.py  test_session_store.py
tests/test_adapters/: test_stdio.py
tests/test_tui/: test_app.py  test_intercept_controls.py  test_message_detail.py  test_message_filter.py  test_message_list.py  test_messages.py  test_status_bar.py  test_tui_replay.py
